upgrade to openjdk24 to implement ffm bindings and use aot